🚨  add lint config

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,6 +82,10 @@
   box-sizing: border-box;
 }
 
+:root {
+  --cherry: #e9064e;
+}
+
 body:has(div[data-page-color="grey"]) {
   @apply bg-ogrey;
 }
