--- a/src/styles/triangle.module.css
+++ b/src/styles/triangle.module.css
@@ -20,6 +20,6 @@
     left: 0;
     border-top: var(--size) solid transparent;
     border-bottom: var(--size) solid transparent;
-    border-right: var(--size) solid var(--cherry);
+    border-right: var(--size) solid var(--custom-color, var(--cherry));
 }
 
